# internal/models/report_category.go
@@ -1,0 +1,14 @@
+package models
+
+import (
+	"time"
+)
+
+type ReportCategory struct {
+	ID          uint      `gorm:"primaryKey" json:"id"`
+	Name        string    `gorm:"type:varchar(100);not null;uniqueIndex" json:"name"`
+	Description *string   `gorm:"type:text" json:"description,omitempty"`
+	CreatedAt   time.Time `json:"created_at"`
+	UpdatedAt   time.Time `json:"updated_at"`
+}
+
